k8s/recommendservice.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: recommendservice
spec:
  selector:
    matchLabels:
      app: recommendservice
  template:
    metadata:
      labels:
        app: recommendservice
    spec:
      terminationGracePeriodSeconds: 5
      containers:
      - name: recommendservice
        image: recommendservice
        ports:
        - containerPort: 8093
---
apiVersion: v1
kind: Service
metadata:
  name: recommendservice
spec:
  type: ClusterIP
  selector:
    app: recommendservice
  ports:
  - name: api
    port: 8093
    targetPort: 8093
