k8s/ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: eshop-ingress
  annotations:
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
spec:
  rules:
  - http:
      paths:
      - path: /api/currencies
        backend:
          serviceName: currencyservice
          servicePort: 8094
      - path: /api/ads
        backend:
          serviceName: adservice
          servicePort: 8095
